# f1_timeseries_mlops

./: .env  .gitignore  Notes.md  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
etl/: load_car_data.py  load_drivers_into_duckdb.py  load_session_into_duckdb.py
etl/data/: f1_data.duckdb
exploration/: car_data.py  influxdb_to_polars.py  session_data.py
infra/: .terraform.lock.hcl  influxdb.tf  init_inbluxdb.py  providers.tf  terraform.tfstate  terraform.tfstate.backup
openf1/: api.py
tests/: test_openf1_api.py
